Fixed small bug in LAB2

--- a/LAB_2_Evolutionary_Algorithms/Evolutionary_algorithms_painting_with_polygons.ipynb
+++ b/LAB_2_Evolutionary_Algorithms/Evolutionary_algorithms_painting_with_polygons.ipynb
@@ -1026,7 +1026,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"><b>Exercise 3:</b><br> In the current example, the entire next generation is created by the crossover process. However, one common feature in genetic algorithms is to define a crossover probability \"pcross\" that controls the probability to perform a crossover process between two partners and generate two new offspring for the next generation. The rest of the population of the new generation would be organisms that have survived, hence with copies the exact DNA. Modify the next_generation() function to implement this feature."
+    "<div class=\"alert alert-block alert-info\"><b>Exercise 3:</b><br> In the current example, the entire next generation is created by the crossover process. However, one common feature in genetic algorithms is to define a crossover probability \"pcross\" that controls the probability to perform a crossover process between two partners and generate two new offspring for the next generation. The rest of the population of the new generation would be organisms that have survived, hence with copies the exact DNA. Modify the next_generation() function to implement this feature.</div>"
    ]
   },
   {
