added new jupyter notebook to be or not to be

--- a/Problem_Solving/To_be_or_not_to_be/to_be_or_not_to_be.ipynb
+++ b/Problem_Solving/To_be_or_not_to_be/to_be_or_not_to_be.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "'E'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "'GBOX'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,33 +120,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['M',\n",
-       " 'Q',\n",
-       " 'W',\n",
-       " 'G',\n",
-       " 'J',\n",
-       " 'T',\n",
-       " 'Y',\n",
-       " 'F',\n",
-       " 'I',\n",
-       " 'R',\n",
-       " 'A',\n",
-       " 'E',\n",
-       " 'B',\n",
-       " 'K',\n",
-       " ' ',\n",
+       "['T',\n",
+       " 'L',\n",
        " 'S',\n",
-       " 'H',\n",
-       " 'P']"
+       " 'C',\n",
+       " 'X',\n",
+       " 'D',\n",
+       " 'K',\n",
+       " 'N',\n",
+       " 'V',\n",
+       " 'M',\n",
+       " 'Q',\n",
+       " 'B',\n",
+       " ' ',\n",
+       " 'Y',\n",
+       " 'G',\n",
+       " 'E',\n",
+       " 'U',\n",
+       " 'H']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,16 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'MQWGJTYFIRAEBK SHP'"
+       "'TLSCXDKNVMQB YGEUH'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "9"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -321,16 +321,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['AAAA', 'AAAB', 'AAAC', 'AAAD', 'AAAE', 'AAAF', 'AAAG', 'AAAH', 'AAAI', 'AAAJ', 'AAAK', 'AAAL', 'AAAM', 'AAAN', 'AAAO']\n",
-      "['AADT', 'AADU', 'AADV', 'AADW', 'AADX', 'AADY', 'AADZ', 'AAD ', 'AAEA', 'AAEB', 'AAEC', 'AAED', 'AAEE', 'AAEF', 'AAEG']\n",
-      "['   M', '   N', '   O', '   P', '   Q', '   R', '   S', '   T', '   U', '   V', '   W', '   X', '   Y', '   Z', '    ']\n"
+      "['AAA', 'AAB', 'AAC', 'AAD', 'AAE', 'AAF', 'AAG', 'AAH', 'AAI', 'AAJ', 'AAK', 'AAL', 'AAM', 'AAN', 'AAO']\n",
+      "['ADT', 'ADU', 'ADV', 'ADW', 'ADX', 'ADY', 'ADZ', 'AD ', 'AEA', 'AEB', 'AEC', 'AED', 'AEE', 'AEF', 'AEG']\n",
+      "['  M', '  N', '  O', '  P', '  Q', '  R', '  S', '  T', '  U', '  V', '  W', '  X', '  Y', '  Z', '   ']\n"
      ]
     }
    ],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
     {
      "data": {
       "text/plain": [
-       "'TO BE OR NOP TO BE'"
+       "'TO BE OR NOT GO BE'"
       ]
      },
      "execution_count": 18,
@@ -737,25 +737,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 ZQFHTSXCM IRLDKNJP 0\n",
-      "18 ZQFHTSXCM IRLDONJP 1\n",
-      "46 ZQFHTSXCM IRLDO JP 2\n",
-      "54 ZQFHTSXCM IRLDO JE 3\n",
-      "65 ZQFHT XCM IRLDO JE 4\n",
-      "76 ZQFHT XCM ITLDO JE 5\n",
-      "107 ZQFHE XCM ITLDO JE 6\n",
-      "161 ZQFHE XCM IT DO JE 7\n",
-      "237 ZQFHE XCM IT TO JE 8\n",
-      "322 ZQFHE XCM IT TO BE 9\n",
-      "338 ZQFHE XRM IT TO BE 10\n",
-      "406 ZQFHE XRMNIT TO BE 11\n",
-      "453 ZQFHE ORMNIT TO BE 12\n",
-      "488 ZOFHE ORMNIT TO BE 13\n",
-      "498 ZOFBE ORMNIT TO BE 14\n",
-      "585 ZOFBE OR NIT TO BE 15\n",
-      "1226 ZO BE OR NIT TO BE 16\n",
-      "1500 TO BE OR NIT TO BE 17\n",
-      "1626 TO BE OR NOT TO BE 18\n"
+      "1 MQRW ENHUAJZCOBXTG 0\n",
+      "65 MQRW ENHUAJZCOOXTG 1\n",
+      "71 MQRW ENHUAJZCOOXTE 2\n",
+      "72 MQRW  NHUAJZCOOXTE 3\n",
+      "149 MQRW  OHUAJZCOOXTE 4\n",
+      "150 MQRW  OHUNJZCOOXTE 5\n",
+      "262 MQRB  OHUNJZCOOXTE 6\n",
+      "305 MQRB  OHUNJZCOO TE 7\n",
+      "349 MQRB  OHUNOZCOO TE 8\n",
+      "368 MQRB  ORUNOZCOO TE 9\n",
+      "470 MQRB  ORUNOZ OO TE 10\n",
+      "472 MORB  ORUNOZ OO TE 11\n",
+      "515 MORB  ORUNOZ TO TE 12\n",
+      "543 MORBE ORUNOZ TO TE 13\n",
+      "573 MORBE ORUNOZ TO BE 14\n",
+      "615 MO BE ORUNOZ TO BE 15\n",
+      "865 MO BE OR NOZ TO BE 16\n",
+      "1167 MO BE OR NOT TO BE 17\n",
+      "1605 TO BE OR NOT TO BE 18\n"
      ]
     }
    ],
@@ -798,7 +798,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('HGSWTEQZYR VMUIAPD', 0), ('WCDQZSVMK EXHYTJRN', 0), ('RWASFLKCTXPHO QUMG', 0), ('BHPGJZ QSCNDFTLUAW', 1), ('ULNAOM QRCWSEZPYVF', 0), ('ZHUFXDLENSBP MIOGR', 1), ('SERPOWXTGKMJNVBYQU', 0), ('IYKQSTCOHBVUPZGWMA', 0), ('JATI FPLBEZKQGWSNH', 0), ('FUKDQPMSZHYCVR IGL', 0)]\n"
+      "[('HNWQ SABKZEGFIYLXR', 0), ('AUS GTWKHJIOZNXFQP', 0), ('NAFRZO KLGIVEJDYTU', 0), ('CBJAKXRYQHOZ GESUM', 2), ('NVHWEQIXULOASKMCJR', 2), ('KIVPBOFCSHZGNYLJQW', 0), ('FXOJVLRHKCUEZYBDTW', 0), (' RDMZBYTIVFQCGSEUP', 0), ('ARDPNHFCWZLQIOUG V', 0), ('YFSCELIBNZKUXQTDWV', 1)]\n"
      ]
     }
    ],
@@ -830,14 +830,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IYKQSTCOHBVUPZGWMA ZHUFXDLENSBP MIOGR\n"
+      "ARDPNHFCWZLQIOUG V NVHWEQIXULOASKMCJR\n"
      ]
     }
    ],
@@ -873,14 +873,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IYKQXDLENSBP MIOGR ZHUFSTCOHBVUPZGWMA\n"
+      "ARDPNHFCWZLQIOMCJR NVHWEQIXULOASKUG V\n"
      ]
     }
    ],
@@ -928,34 +928,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GZFBK CAEVOJYHXDQL 3\n",
-      "LO XBIKNVZEEOIMLBF 3\n",
-      "TO BK CU PFTJTW HG 9\n",
-      "TO BKDOU NOJJTW BF 11\n",
-      "TO BB OU NOTHTU BF 13\n",
-      "TO BK OQ NOTJTM BF 13\n",
-      "TO BK OR NOTHTM BF 14\n",
-      "TO BK OR NOTHTU BF 14\n",
-      "TO BK OR NOTHTU BF 14\n",
-      "TO BK OR NOTYTU BF 14\n",
-      "TO BK OR NOTHTU BF 14\n",
-      "TO BK OR NOTJTU BF 14\n",
-      "TO BK OR NOTHTU BF 14\n",
-      "TO BK OR NOTJTU BF 14\n",
-      "TO BK OR NOTHTU BF 14\n",
-      "TO BK OR NOTJTU BF 14\n",
-      "TO BK OR NOTHTU BF 14\n",
-      "TO BK OR NOTHTU BF 14\n",
-      "TO BK OR NOTJTU BF 14\n",
-      "TO BK OR NOTHTU BF 14\n",
-      "TO BK OR NOTJTU BF 14\n"
+      "FTEZSWUR NLKCVIAHJ 3\n",
+      "FTEZSWUR NLKCHOAPI 4\n",
+      "HOWBETFRDNHTCHOQBW 8\n",
+      "ZEYBEUOR NHV WOQBW 9\n",
+      "HO BEWOR NHT NONBD 12\n",
+      "HO BEWOR NHT HOQBW 12\n",
+      "ZO BEWOR NHT XOQBD 12\n",
+      "HO BEWOR NHT XOQBW 12\n",
+      "ZO BEWOR NHT HOQBW 12\n",
+      "ZO BEWOR NHT HOQBW 12\n",
+      "ZO BEWOR NHT XOLBW 12\n",
+      "ZO BEWOR NHT XOLBW 12\n",
+      "ZO BEWOR NHT XOQBW 12\n",
+      "ZO BEWOR NHT XOLBW 12\n",
+      "ZO BEWOR NHT XOLBW 12\n",
+      "ZO BEWOR NHT XOQBW 12\n",
+      "ZO BEWOR NHT XOLBW 12\n",
+      "ZO BEWOR NHT XOLBW 12\n",
+      "ZO BEWOR NHT XOLBW 12\n",
+      "ZO BEWOR NHT XOLBW 12\n",
+      "ZO BEWOR NHT XOLBW 12\n"
      ]
     }
    ],
