Fixed small errors in Decision Trees and K-Means Clustering notebooks

--- a/Decision_Trees/decision_trees_titanic.ipynb
+++ b/Decision_Trees/decision_trees_titanic.ipynb
@@ -605,7 +605,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\"><b>Exercise 1:</b><br> \n",
     "    \n",
-    "Plot bar charts depicting how *Pclass* and *Embarked* (categorical variables) relate to survival, as was done for gender. "
+    "Plot bar charts depicting how *Pclass* and *Embarked* (categorical variables) relate to survival, as was done for gender.</div>"
    ]
   },
   {
@@ -621,7 +621,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\"><b>Exercise 2:</b><br> \n",
     "    \n",
-    "Show the correlation between *Fare* (a continuous variable) and *Survival* using a histogram plot similar to the one used for *Age*. "
+    "Show the correlation between *Fare* (a continuous variable) and *Survival* using a histogram plot similar to the one used for *Age*. </div>"
    ]
   },
   {
@@ -1805,7 +1805,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\"><b>Exercise 3:</b><br>\n",
     "    \n",
-    "Now that you have played with different tree depths it's time to make a plot. Create a list of tree depths and loop over this list to obtain a corresponding accuracy for each depth for both the training and the test datasets. Try running your code for different train/test splits i.e. with different random_state values in the train_test_split() funtion."
+    "Now that you have played with different tree depths it's time to make a plot. Create a list of tree depths and loop over this list to obtain a corresponding accuracy for each depth for both the training and the test datasets. Try running your code for different train/test splits i.e. with different random_state values in the train_test_split() funtion.</div>"
    ]
   },
   {
@@ -1848,7 +1848,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\"><b>Exercise 4:</b><br>\n",
     "    \n",
-    "Plot accuracy against tree depth using k-fold cross-validation to replace the simple Hold-out method used in the previous plot."
+    "Plot accuracy against tree depth using k-fold cross-validation to replace the simple Hold-out method used in the previous plot.</div>"
    ]
   },
   {
@@ -1959,7 +1959,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\"><b>Exercise 5:</b><br>\n",
     "    \n",
-    "Plot the mean performance of the Random Forest algorithm as a function of tree depth using different numbers of trees. Show that each individual tree can be grown deeper when an ensemble method is used and a greater accuracy achieved overall. Also show on the plot the results from cross-validation using a single decision tree for comparison. (Note that you should not set n_estimators=1 in the Random Forest algorithm to represent a single decision tree unless max_features is set equal to the total number of features in the dataframe and bootStrap=False)."
+    "Plot the mean performance of the Random Forest algorithm as a function of tree depth using different numbers of trees. Show that each individual tree can be grown deeper when an ensemble method is used and a greater accuracy achieved overall. Also show on the plot the results from cross-validation using a single decision tree for comparison. (Note that you should not set n_estimators=1 in the Random Forest algorithm to represent a single decision tree unless max_features is set equal to the total number of features in the dataframe and bootStrap=False).</div>"
    ]
   },
   {
