--- a/K-Means_Clustering/kmeans_clustering_netflix_movies.ipynb
+++ b/K-Means_Clustering/kmeans_clustering_netflix_movies.ipynb
@@ -490,7 +490,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\"><b>Exercise 1:</b><br> \n",
     "    \n",
-    "Plot a bar chart to show how often each genre appears in the movies dataset."
+    "Plot a bar chart to show how often each genre appears in the movies dataset.</div>"
    ]
   },
   {
@@ -1080,7 +1080,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\"><b>Exercise 2:</b><br> \n",
     "    \n",
-    "Make a 3D plot showing k clusters using the genres \"Romance\", \"Sci-Fi\" and \"Action\"."
+    "Make a 3D plot showing k clusters using the genres \"Romance\", \"Sci-Fi\" and \"Action\".</div>"
    ]
   },
   {
