Improved to_be_or_not_to_be.ipynb

--- a/Problem_Solving/To_be_or_not_to_be/to_be_or_not_to_be.ipynb
+++ b/Problem_Solving/To_be_or_not_to_be/to_be_or_not_to_be.ipynb
@@ -126,24 +126,24 @@
     {
      "data": {
       "text/plain": [
-       "['T',\n",
-       " 'L',\n",
+       "['I',\n",
+       " 'E',\n",
        " 'S',\n",
-       " 'C',\n",
-       " 'X',\n",
+       " 'F',\n",
+       " 'U',\n",
        " 'D',\n",
        " 'K',\n",
-       " 'N',\n",
-       " 'V',\n",
+       " 'A',\n",
        " 'M',\n",
-       " 'Q',\n",
+       " 'T',\n",
+       " 'H',\n",
        " 'B',\n",
-       " ' ',\n",
        " 'Y',\n",
-       " 'G',\n",
-       " 'E',\n",
-       " 'U',\n",
-       " 'H']"
+       " 'V',\n",
+       " 'P',\n",
+       " 'O',\n",
+       " 'W',\n",
+       " 'L']"
       ]
      },
      "execution_count": 5,
@@ -173,7 +173,7 @@
     {
      "data": {
       "text/plain": [
-       "'TLSCXDKNVMQB YGEUH'"
+       "'IESFUDKAMTHBYVPOWL'"
       ]
      },
      "execution_count": 6,
@@ -330,6 +330,7 @@
      "text": [
       "['AAA', 'AAB', 'AAC', 'AAD', 'AAE', 'AAF', 'AAG', 'AAH', 'AAI', 'AAJ', 'AAK', 'AAL', 'AAM', 'AAN', 'AAO']\n",
       "['ADT', 'ADU', 'ADV', 'ADW', 'ADX', 'ADY', 'ADZ', 'AD ', 'AEA', 'AEB', 'AEC', 'AED', 'AEE', 'AEF', 'AEG']\n",
+      "...\n",
       "['  M', '  N', '  O', '  P', '  Q', '  R', '  S', '  T', '  U', '  V', '  W', '  X', '  Y', '  Z', '   ']\n"
      ]
     }
@@ -343,6 +344,7 @@
     "#print(allcand)\n",
     "print(newcand[:15])\n",
     "print(newcand[100:115])\n",
+    "print(\"...\")\n",
     "print(newcand[-15:])"
    ]
   },
@@ -364,17 +366,20 @@
      "text": [
       "['AAAAA', 'AAAAB', 'AAAAC', 'AAAAD', 'AAAAE', 'AAAAF', 'AAAAG', 'AAAAH', 'AAAAI', 'AAAAJ', 'AAAAK', 'AAAAL', 'AAAAM', 'AAAAN', 'AAAAO']\n",
       "['AAADT', 'AAADU', 'AAADV', 'AAADW', 'AAADX', 'AAADY', 'AAADZ', 'AAAD ', 'AAAEA', 'AAAEB', 'AAAEC', 'AAAED', 'AAAEE', 'AAAEF', 'AAAEG']\n",
+      "...\n",
       "['    M', '    N', '    O', '    P', '    Q', '    R', '    S', '    T', '    U', '    V', '    W', '    X', '    Y', '    Z', '     ']\n",
-      "14348907\n"
+      "Total number of combinations: 14348907\n"
      ]
     }
    ],
    "source": [
+    "#Number of positions (character length of the target)\n",
     "Npos = 5\n",
     "\n",
     "# Manually do the first position\n",
     "allcand = charlist\n",
     "\n",
+    "# We iterate over Npos-1 because we already did manually 1st level \n",
     "for i in range(Npos-1):\n",
     "    newcand = []\n",
     "    for x in allcand:\n",
@@ -384,8 +389,9 @@
     "\n",
     "print(allcand[:15])\n",
     "print(allcand[100:115])\n",
+    "print(\"...\")\n",
     "print(allcand[-15:])\n",
-    "print(len(allcand))"
+    "print(\"Total number of combinations: \"+ str(len(allcand)))"
    ]
   },
   {
@@ -404,17 +410,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
-      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+      "[('AAAAA', 0), ('AAAAB', 0), ('AAAAC', 0), ('AAAAD', 0), ('AAAAE', 1), ('AAAAF', 0), ('AAAAG', 0), ('AAAAH', 0), ('AAAAI', 0), ('AAAAJ', 0)]\n",
+      "[('AAADT', 0), ('AAADU', 0), ('AAADV', 0), ('AAADW', 0), ('AAADX', 0), ('AAADY', 0), ('AAADZ', 0), ('AAAD ', 0), ('AAAEA', 0), ('AAAEB', 0)]\n",
+      "...\n",
+      "[('    R', 1), ('    S', 1), ('    T', 1), ('    U', 1), ('    V', 1), ('    W', 1), ('    X', 1), ('    Y', 1), ('    Z', 1), ('     ', 1)]\n"
      ]
     }
    ],
    "source": [
-    "vals = [check(x,targetshort) for x in allcand]\n",
-    "print(vals[:15])\n",
-    "print(vals[100:115])\n",
-    "print(vals[-15:])"
+    "scores = [check(x,targetshort) for x in allcand]\n",
+    "# Put candidates and scores side by side\n",
+    "both = list(zip(allcand,scores))\n",
+    "print(both[:10])\n",
+    "print(both[100:110])\n",
+    "print(\"...\")\n",
+    "print(both[-10:])"
    ]
   },
   {
@@ -531,7 +541,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame(zip(allcand,vals), columns=[\"Candidate\", \"Score\"])\n",
+    "df = pd.DataFrame(zip(allcand,scores), columns=[\"Candidate\", \"Score\"])\n",
     "df.sort_values(by=\"Score\", inplace=True, ascending=False)\n",
     "df.head(10)"
    ]
@@ -603,12 +613,13 @@
     }
    ],
    "source": [
+    "max_score = 5\n",
     "i = 0\n",
     "for comb in itertools.product(charlist, repeat=5):\n",
     "    i += 1\n",
     "    candidate = ''.join(comb)\n",
     "    score = check(candidate,targetshort)\n",
-    "    if score == 5:\n",
+    "    if score == max_score:\n",
     "        break\n",
     "        \n",
     "print([i,candidate,score])"
@@ -639,12 +650,26 @@
       "['TO']\n",
       "['TO ']\n",
       "['TO B']\n",
-      "['TO BE']\n"
+      "['TO BE']\n",
+      "['TO BE ']\n",
+      "['TO BE O']\n",
+      "['TO BE OR']\n",
+      "['TO BE OR ']\n",
+      "['TO BE OR N']\n",
+      "['TO BE OR NO']\n",
+      "['TO BE OR NOT']\n",
+      "['TO BE OR NOT ']\n",
+      "['TO BE OR NOT T']\n",
+      "['TO BE OR NOT TO']\n",
+      "['TO BE OR NOT TO ']\n",
+      "['TO BE OR NOT TO B']\n",
+      "['TO BE OR NOT TO BE']\n"
      ]
     }
    ],
    "source": [
-    "Npos = 5\n",
+    "# Number of target positions (character length)\n",
+    "Npos = 18\n",
     "\n",
     "# Manually do the first position\n",
     "allcand = charlist\n",
@@ -691,7 +716,7 @@
     {
      "data": {
       "text/plain": [
-       "'TO BE OR NOT GO BE'"
+       "'AAAAAEAAAAAA'"
       ]
      },
      "execution_count": 18,
@@ -700,11 +725,18 @@
     }
    ],
    "source": [
-    "import string\n",
-    "\n",
     "def mutation(string,values):\n",
     "    \"\"\"\n",
-    "    Creates a random mutation in the string \n",
+    "    Creates a random mutation in a character string.\n",
+    "    \n",
+    "    Inputs\n",
+    "    ======\n",
+    "    string: Character string to mutate\n",
+    "    values: List of possible values to be used in the mutation.\n",
+    "    \n",
+    "    Output\n",
+    "    ======\n",
+    "    String of characters with the random mutation.\n",
     "    \n",
     "    \"\"\"\n",
     "    newstring = string\n",
@@ -717,7 +749,7 @@
     "    \n",
     "    return(newstring)\n",
     "\n",
-    "mutant = mutation(\"TO BE OR NOT TO BE\",charlist)\n",
+    "mutant = mutation(\"AAAAAAAAAAAA\",charlist)\n",
     "mutant"
    ]
   },
@@ -737,29 +769,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 MQRW ENHUAJZCOBXTG 0\n",
-      "65 MQRW ENHUAJZCOOXTG 1\n",
-      "71 MQRW ENHUAJZCOOXTE 2\n",
-      "72 MQRW  NHUAJZCOOXTE 3\n",
-      "149 MQRW  OHUAJZCOOXTE 4\n",
-      "150 MQRW  OHUNJZCOOXTE 5\n",
-      "262 MQRB  OHUNJZCOOXTE 6\n",
-      "305 MQRB  OHUNJZCOO TE 7\n",
-      "349 MQRB  OHUNOZCOO TE 8\n",
-      "368 MQRB  ORUNOZCOO TE 9\n",
-      "470 MQRB  ORUNOZ OO TE 10\n",
-      "472 MORB  ORUNOZ OO TE 11\n",
-      "515 MORB  ORUNOZ TO TE 12\n",
-      "543 MORBE ORUNOZ TO TE 13\n",
-      "573 MORBE ORUNOZ TO BE 14\n",
-      "615 MO BE ORUNOZ TO BE 15\n",
-      "865 MO BE OR NOZ TO BE 16\n",
-      "1167 MO BE OR NOT TO BE 17\n",
-      "1605 TO BE OR NOT TO BE 18\n"
+      "1 IZCSWOAGFTVLEYMPXD 0\n",
+      "7 IZCSWOAGFTVLETMPXD 1\n",
+      "22 IZCSWOAG TVLETMPXD 2\n",
+      "43 IZCSWOAR TVLETMPXD 3\n",
+      "77 IZCSEOAR TVLETMPXD 4\n",
+      "80 IZCSEOAR TVTETMPXD 5\n",
+      "165 IOCSEOAR TVTETMPXD 6\n",
+      "188 IOCSEOAR TOTETMPXD 7\n",
+      "194 TOCSEOAR TOTETMPXD 8\n",
+      "243 TOCSEOAR TOTETOPXD 9\n",
+      "280 TOCSEOAR TOTETOPBD 10\n",
+      "281 TOCSEOAR TOT TOPBD 11\n",
+      "310 TO SEOAR TOT TOPBD 12\n",
+      "513 TO SEOAR TOT TO BD 13\n",
+      "537 TO SEOOR TOT TO BD 14\n",
+      "987 TO SEOOR NOT TO BD 15\n",
+      "1078 TO SEOOR NOT TO BE 16\n",
+      "1409 TO BEOOR NOT TO BE 17\n",
+      "2720 TO BE OR NOT TO BE 18\n"
      ]
     }
    ],
    "source": [
+    "# Generate the first candidate at random\n",
     "best = ''.join(random.sample(charlist,18))\n",
     "score = check(best,target)\n",
     "i = 1\n",
@@ -772,11 +805,13 @@
     "    new = mutation(best,charlist)\n",
     "    newscore = check(new,target)\n",
     "    \n",
+    "    # Show some information if the score has increased\n",
     "    if newscore > score:\n",
     "        best = new\n",
     "        score = newscore\n",
     "        print(i,best,score)\n",
     "    \n",
+    "    # Stop if the score reaches the maximum\n",
     "    if score >= len(target):\n",
     "        break"
    ]
@@ -786,7 +821,9 @@
    "metadata": {},
    "source": [
     "## Genetic Algorithm\n",
-    "---"
+    "---\n",
+    "\n",
+    "We start by creating a function that generates a set of candidates, rather than just one, with their corresponding scores."
    ]
   },
   {
@@ -798,7 +835,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('HNWQ SABKZEGFIYLXR', 0), ('AUS GTWKHJIOZNXFQP', 0), ('NAFRZO KLGIVEJDYTU', 0), ('CBJAKXRYQHOZ GESUM', 2), ('NVHWEQIXULOASKMCJR', 2), ('KIVPBOFCSHZGNYLJQW', 0), ('FXOJVLRHKCUEZYBDTW', 0), (' RDMZBYTIVFQCGSEUP', 0), ('ARDPNHFCWZLQIOUG V', 0), ('YFSCELIBNZKUXQTDWV', 1)]\n"
+      "[('DMSGIJ QWLYXTOUNVH', 0), ('EIBSUNYRQZF TGCWKD', 1), ('CBQAMJUH NGZKYDFEV', 2), ('OPT ZDGYHNXBIFMRCQ', 1), ('EQMPZBHLCDXIWUYKTV', 0), ('GXQL BTDNICZPUVYOW', 0), ('EONADQGJIUXWVLY MS', 2), ('GAL SWHCMOENFPVBKU', 0), ('MKARS ZTWNEVIFBDLY', 2), ('CPKBUQD ZHGRYJTIOL', 1)]\n"
      ]
     }
    ],
@@ -837,7 +874,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARDPNHFCWZLQIOUG V NVHWEQIXULOASKMCJR\n"
+      "1st selected organism: DMSGIJ QWLYXTOUNVH\n",
+      "2nd selected organism: CBQAMJUH NGZKYDFEV\n"
      ]
     }
    ],
@@ -861,7 +899,8 @@
     "    return(parent1, parent2)\n",
     "\n",
     "p1,p2 = selection(pop,scores)\n",
-    "print(p1,p2)"
+    "print(\"1st selected organism: \" + p1)\n",
+    "print(\"2nd selected organism: \" + p2)"
    ]
   },
   {
@@ -880,7 +919,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ARDPNHFCWZLQIOMCJR NVHWEQIXULOASKUG V\n"
+      "1st offspring: DMSGIJUH NGZKYDFEV\n",
+      "2nd offspring: CBQAMJ QWLYXTOUNVH\n"
      ]
     }
    ],
@@ -916,7 +956,8 @@
     "    return(offspring1,offspring2)\n",
     "\n",
     "o1, o2 = crossover(p1, p2, charlist, pmut=0.1)\n",
-    "print(o1,o2)"
+    "print(\"1st offspring: \" + o1)\n",
+    "print(\"2nd offspring: \" + o2)"
    ]
   },
   {
@@ -935,34 +976,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FTEZSWUR NLKCVIAHJ 3\n",
-      "FTEZSWUR NLKCHOAPI 4\n",
-      "HOWBETFRDNHTCHOQBW 8\n",
-      "ZEYBEUOR NHV WOQBW 9\n",
-      "HO BEWOR NHT NONBD 12\n",
-      "HO BEWOR NHT HOQBW 12\n",
-      "ZO BEWOR NHT XOQBD 12\n",
-      "HO BEWOR NHT XOQBW 12\n",
-      "ZO BEWOR NHT HOQBW 12\n",
-      "ZO BEWOR NHT HOQBW 12\n",
-      "ZO BEWOR NHT XOLBW 12\n",
-      "ZO BEWOR NHT XOLBW 12\n",
-      "ZO BEWOR NHT XOQBW 12\n",
-      "ZO BEWOR NHT XOLBW 12\n",
-      "ZO BEWOR NHT XOLBW 12\n",
-      "ZO BEWOR NHT XOQBW 12\n",
-      "ZO BEWOR NHT XOLBW 12\n",
-      "ZO BEWOR NHT XOLBW 12\n",
-      "ZO BEWOR NHT XOLBW 12\n",
-      "ZO BEWOR NHT XOLBW 12\n",
-      "ZO BEWOR NHT XOLBW 12\n"
+      "NYEQR JCZKFTUXGWBL 3\n",
+      "NXWVEQOVHXEM TFPUR 4\n",
+      "TI KR JR JUC TDHME 8\n",
+      "TO BE NR JUC TWPBL 11\n",
+      "TO BE OR NOTUTFOJ  13\n",
+      "TO BE OR XOT TUWBW 14\n",
+      "TO BE OR NOT TDWBL 15\n",
+      "TO BE OR NOT TFWBL 15\n",
+      "TO BE OR NOT TWWBL 15\n",
+      "TO BE OR NOT TFWBL 15\n",
+      "TO BE OR NOT TFPBL 15\n",
+      "TO BE OR NOT TFPBL 15\n",
+      "TO BE OR NOT TFOBL 15\n",
+      "TO BE OR NOT TFWBL 15\n",
+      "TO BE OR NOT TUPBL 15\n",
+      "TO BE OR NOT TFPBL 15\n",
+      "TO BE OR NOT TFWBL 15\n",
+      "TO BE OR NOT TFPBL 15\n",
+      "TO BE OR NOT TFPBL 15\n",
+      "TO BE OR NOT TFPBL 15\n",
+      "TO BE OR NOT TFPBL 15\n"
      ]
     }
    ],
    "source": [
-    "Ngen = 200 # Number of generations\n",
-    "Npop = 100 # Number of population (even number)\n",
-    "pmut = 0.5 # Probability to mutate\n",
+    "Ngen = 200 # Number of generations (rounds)\n",
+    "Npop = 200 # Number of population (even number)\n",
+    "pmut = 0.1 # Probability to mutate\n",
     "\n",
     "# Create new population\n",
     "pop = new_pop(Npop,charlist)\n",
@@ -985,12 +1026,10 @@
     "    # Recalculate the scores\n",
     "    scores = [check(x,target) for x in pop]\n",
     "    \n",
+    "    # Print best candidate every 10 rounds\n",
     "    if gen%10 == 0:\n",
-    "        # Print stuff every 10 rounds\n",
     "        imax = np.argmax(scores) \n",
-    "        print(pop[imax],scores[imax])\n",
-    "        #print(pop)\n",
-    "    "
+    "        print(pop[imax],scores[imax])    "
    ]
   },
   {
@@ -1004,7 +1043,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1018,7 +1057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
