Improved to_be_or_not_to_be.ipynb 2

--- a/Problem_Solving/To_be_or_not_to_be/to_be_or_not_to_be.ipynb
+++ b/Problem_Solving/To_be_or_not_to_be/to_be_or_not_to_be.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "In this notebook we will explore how to implement a set of search algorithms and evolutionary algorithms for coming up with the famous finite sequence of letters \"to be or not to be\" from the Shakespeare's play [Hamlet](https://en.wikipedia.org/wiki/Hamlet).\n",
     "\n",
-    "![title](img/infinite_monkey.png)"
+    "![title](https://github.com/mariogutierrezroig/Teaching-Notebooks/raw/main/Problem_Solving/To_be_or_not_to_be/img/infinite_monkey.png)"
    ]
   },
   {
