--- a/Evolutionary_Algorithms/Evolutionary_algorithms_painting_with_polygons.ipynb
+++ b/Evolutionary_Algorithms/Evolutionary_algorithms_painting_with_polygons.ipynb
@@ -274,6 +274,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXERCISE 1 SOLUTION ###\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -563,6 +573,15 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\"><b>Exercise 2:</b><br> Implement the two other mutation types, \"soft\" and \"medium\", as explained below:<br><br><u>Soft mutation:</u> This  mutation consist in modifying by a small delta (small amount) either one coordinate of one polygon's vertex or one of the RGBA channels from one polygon's colour.<br><u>Medium mutation:</u> Changing the colour and one of the vertices as in the hard mutation, but picking only one of the two options at a time.<br><br>Finally, run three difference instances of the Hill Climbing algorithm starting from the same random collection but using a different mutation type. Compare the performance curves.<br><br><i>Hint: The soft mutation is not as easy to implement as it seems. For the delta value consider a random integer from -10 to 10, making sure the resulting value does not fall outside the size of the of the canvas when changing vertices or is always within 0 and 255 when changing RGBA channels. Additionally, remember that the tuples are immutable, so you cannot modify the coordinates of a vector or change the value of an RGBA channel. Instead, you need to convert the value into a list, modify it, then convert it back to tuple and replace it with the original.</i></div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXERCISE 2 SOLUTION ###\n"
    ]
   },
   {
@@ -1030,6 +1049,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXERCISE 3 SOLUTION ###\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1040,7 +1068,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1054,7 +1082,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
