--- a/Convolutional_Neural_Networks/CNN_handwritten_numbers.ipynb
+++ b/Convolutional_Neural_Networks/CNN_handwritten_numbers.ipynb
@@ -441,6 +441,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXERCISE 1 SOLUTION ###\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -593,6 +603,16 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\"><b>Exercise 2:</b><br>Run the advanced CNN designed in the Exercise 1 and compare the results.</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXERCISE 2 SOLUTION ###\n",
+    "\n"
    ]
   },
   {
@@ -812,6 +832,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXERCISE 3 SOLUTION ###\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -844,6 +874,8 @@
     }
    ],
    "source": [
+    "### USE THIS FOR EXERCISE 4 SOLUTION ###\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -902,6 +934,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### EXERCISE 4 SOLUTION ###\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -912,7 +954,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -926,7 +968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
