Improved Lab 6 bis

--- a/Convolutional_Neural_Networks/CNN_handwritten_numbers.ipynb
+++ b/Convolutional_Neural_Networks/CNN_handwritten_numbers.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.datasets import mnist\n",
+    "from tensorflow.keras.datasets import mnist\n",
     "(trainX, trainY), (testX, testY) = mnist.load_data()"
    ]
   },
@@ -342,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.utils import to_categorical\n",
+    "from tensorflow.keras.utils import to_categorical\n",
     "\n",
     "# Function to load and prepare the dataset\n",
     "def load_dataset():\n",
@@ -409,9 +409,9 @@
     }
    ],
    "source": [
-    "from keras.models import Sequential\n",
-    "from keras.layers import Conv2D, MaxPooling2D, Dense, Flatten\n",
-    "from keras.optimizers import SGD\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Dense, Flatten\n",
+    "from tensorflow.keras.optimizers import SGD\n",
     "\n",
     "def define_model_simple():\n",
     "    # Define the Sequential model class for our case\n",
@@ -762,7 +762,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.preprocessing.image import load_img, img_to_array\n",
+    "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
     "import numpy as np\n",
     "\n",
     "def load_image(filename):\n",
@@ -800,7 +800,7 @@
     }
    ],
    "source": [
-    "from keras.models import load_model\n",
+    "from tensorflow.keras.models import load_model\n",
     "\n",
     "def new_prediction(filename):\n",
     "    # load the image\n",
@@ -845,7 +845,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"><b>Exercise 4: (Optional)</b><br>So far we have used the MNIST dataset only for digits. However, there is and extended version of the dataset called <a href=\"https://www.nist.gov/itl/products-and-services/emnist-dataset\">EMNIST</a> that constains characters as well as numbers. Use this dataset, <a href=\"https://moodle.essex.ac.uk/course/view.php?id=15076&section=13\">available to download in Moodle</a>, to train a CNN and successfully read (with at least 70% success) the following photo from a handwritten text:<br><br> <img src=\"DATASCIENCEISFUN.png\" style=\"width: 600px\"><br><br>Alternatively, you can also try to handwrite something on your own, take a picture, and make the CNN read your own words.<br><br><i>Hints: There are several things you should consider for such an endeavour.\n",
+    "<div class=\"alert alert-block alert-info\"><b>Exercise 4: (Optional)</b><br>So far we have used the MNIST dataset only for digits. However, there is and extended version of the dataset called <a href=\"https://www.nist.gov/itl/products-and-services/emnist-dataset\">EMNIST</a> that constains characters as well as numbers. Use this dataset, <a href=\"https://moodle.essex.ac.uk/course/view.php?id=15076&section=13\">available to download in Moodle</a>, to train a CNN and successfully read (with at least 70% success) the following photo from a handwritten text:<br><br> <img src=\"https://raw.githubusercontent.com/mariogutierrezroig/Teaching-Notebooks/main/Convolutional_Neural_Networks/DATASCIENCEISFUN.png\" style=\"width: 600px\"><br><br>Alternatively, you can also try to handwrite something on your own, take a picture, and make the CNN read your own words.<br><br><i>Hints: There are several things you should consider for such an endeavour.\n",
     "<ol>\n",
     "  <li>First, is that loading the EMNIST dataset is going to be different than with MNIST since it is not part of the keras built-in datasets. Use the function below to load and pre-process (basically flip and rotate) the EMNIST training and testing datasets, so that you end up with objects of the exact same format than in MNIST. Please, be aware that you need to download the \".zip\" file and decompress it in the same directory than the jupyter notebook.</li>\n",
     "  <li>In the decompressed folder called \"emnist-balanced\" you will find the CSVs with the train and test datasets, alongside the mapping.txt file, which contains the categories for the characters. Once a class is predicted, use chr(mapping(predicted_class)) in order to obtain the actual predicted character.</li>\n",
